base/src/test/resources/failure/projection/issues2/issue34.aya.txt
In file $FILE:11:90 ->

   9 | def infix = {A : Type} (a b : A) : Type => Path (\ i => A) a b
  10 | 
  11 | def psqueeze {A : Type} {a a' : A} (p : a = a') (i : I) : a = p.at i => path (\j => p.at (I.squeeze i j))
                                                                                                 ^-------^

Error: Unknown field `squeeze` projected

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
